--- a/admin/css/activities-admin.css
+++ b/admin/css/activities-admin.css
@@ -26,6 +26,14 @@
   padding: 7px 14px 7px;
 }
 
+.acts-response-success {
+  color: green;
+}
+
+.acts-response-error {
+  color: red;
+}
+
 .acts-delete-button.button {
   background-color: #cc0000;
   border-color: #4d0000;
@@ -698,6 +706,16 @@
   position: absolute;
   top: 54px;
   left: 54px;
+}
+
+.acts-nice-new-response {
+  font-size: 14px;
+  vertical-align: middle;
+}
+
+.acts-nice-new-plan {
+  float: right;
+  padding-bottom: 5px;
 }
 
 .acts-nice-session {
