More dynamic participant limit on activity edit page. Added status_image/text option to shortcode.

--- a/admin/css/activities-admin.css
+++ b/admin/css/activities-admin.css
@@ -229,7 +229,7 @@
     visibility: hidden;
 }
 
-.acts-category-name a:hover .dashicons {
+.acts-category-name a:hover:not([disabled]) .dashicons {
     visibility: visible;
 }
 
